--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "fs": "^0.0.1-security",
+    "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "logging": "^3.3.0",
+    "mongo-mask": "^1.1.0",
     "mongoose": "^6.8.3",
     "mongoose-unique-validator": "^3.1.0",
     "multer": "^1.4.5-lts.1",
